k8s/ingress/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ui.jae-kube.ga
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
    - host: api.jae-kube.ga 
      http:
        paths:
          - path: /
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
